fixed gap in information

--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,10 @@ nav{
         text-align: center;
     }
 
+    .Information{
+        gap: 5rem;
+    }
+
 }
 
 @media (max-width: 767px) {
@@ -502,6 +506,7 @@ nav{
         width: 100%;
         display: flex;
         flex-direction: column;
+        gap: 3rem;
     }
 
     .section1{
@@ -626,13 +631,6 @@ nav{
 
     .card .icon{
         text-align: center;
-    }
-
-    .Information{
-        width: 100%;
-        display: flex;
-        gap:0;
-        justify-content: space-between;
     }
 
     .link{
